--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+_site
+.DS_Store
+*.swp
+*.bak
+js/local
+style/local
+Gemfile.lock
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
